tests/cheri-ci/expected/0231-tag-redefinition.error.c.expected
cheri-ci/0231-tag-redefinition.error.c:2:8: error: constraint violation: redefinition of 'T'
struct T { float x; };
       ^ 
ยง6.7.2.3#1: 
1   A specific type shall have its content defined at most once.
